--- a/README
+++ b/README
@@ -6,3 +6,10 @@ https://github.com/runelite/runelite/wiki/Building-with-IntelliJ-IDEA
 2. Copy paste the prayerflicker into runelite-client\src\main\java\net\runelite\client\plugins
 
 3. Run RuneLite
+
+---
+
+To use the auto prayer flicker, just find the auto prayer flicker plugin in the RuneLite app and set a hotkey. 
+Press the hotkey to switch the prayer flicker on/off.
+
+Enjoy!
