--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Steps to using the prayer flicker:
+Steps to installing the prayer flicker:
 
 1. Build RuneLite in an IDE. You can follow a guide on this here:
 https://github.com/runelite/runelite/wiki/Building-with-IntelliJ-IDEA
