--- a/README
+++ b/README
@@ -6,7 +6,7 @@ or here https://www.youtube.com/watch?v=4tIQ-tYVYeM&ab_channel=Nom
 
 2. Copy paste the prayerflicker folder into runelite-client\src\main\java\net\runelite\client\plugins
 
-3. Run RuneLite
+3. Run RuneLite from your IDE.
 
 ---
 
