--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+Copyright McDounie
+
+// ------------------------------------------------------------
+
 Demonstration of the plugin:
 https://youtu.be/D559oVH5QVY
 https://youtu.be/E9d2dU5Qhrg
